--- a/03 - CSS Variables/CSS_Variables.css
+++ b/03 - CSS Variables/CSS_Variables.css
@@ -1,16 +1,32 @@
- body {
-      text-align: center;
-      background: #193549;
-      color: white;
-      font-family: 'helvetica neue', sans-serif;
-      font-weight: 100;
-      font-size: 50px;
-    }
+:root{
+  --base-color:yellow;
+  --spacing:20px;
+  --blur:10px;
+}
 
-    .controls {
-      margin-bottom: 50px;
-    }
+img{
+  padding:var(--spacing);
+  background-color:var(--base-color);
+  filter:blur(var(--blur));
+}
 
-    input {
-      width: 100px;
-    }
+.hl{
+  color:var(--base-color);
+}
+
+body {
+  text-align: center;
+  background: #193549;
+  color: white;
+  font-family: 'helvetica neue', sans-serif;
+  font-weight: 100;
+  font-size: 50px;
+}
+
+.controls {
+  margin-bottom: 50px;
+}
+
+input {
+  width: 100px;
+}
